{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Mouse",
            "id": "c6adf932-aefc-4739-85ec-3522694ab1ba",
            "actions": [
                {
                    "name": "MouseClick",
                    "type": "Button",
                    "id": "f55459a2-54b3-4c77-baec-22726f9bf4b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "5b5cd276-d77b-43aa-8eed-1dfe8f7f419b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b5c422d1-addd-4b6a-8c72-3345f201efa3",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea95534c-b279-4548-a423-2fe19891c91d",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}